--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ body {
   flex-direction:column;
 }
 
+#container {
+  margin-top:20px;  
+  padding-top:50px;
+}
+
 .box {
   background-color: 	#383c4a;
   width:500px;
@@ -84,4 +89,9 @@ a:link, a:visited {
   color:white;
   margin:10px;
   font-size:3em;
+}
+
+.search {
+  display: flex;
+  justify-content: center
 }
